tests/tooling/fixtures/native/recovery/negative/negative_switch_case_if_unknown_break_conservative_reject.objc3
// Negative fixture: unresolved if-condition branch-selection remains conservative in switch case-body return-path analysis.
// Expected diagnostic code(s): O3S205.
module NegativeSwitchCaseIfUnknownBreakConservativeReject;

fn main() -> i32 {
  let value = 1;
  switch (value) {
    case 1:
      if (value) {
        break;
      }
    case 2:
      return 42;
    default:
      return 7;
  }
}
